# markdown-to-docx

./: .dockerignore  .gitignore  Dockerfile  README.md  meta.yaml  mise.toml  package-lock.json  package.json  pyproject.toml
docker/: mmdc-wrapper.sh
docs/: design.md  example-report.md  markdown-schema.md
examples/example-report/: example-report.md  meta.yaml  sources.yaml
references/: sources.yaml
skills/: markdown-authoring.md  prompt-template.md  validator-checks.md
src/md2docx/: bibliography.py  build.py  cli.py  codeimg.py  docxops.py  mermaid.py  pandoc.py  plantuml.py  preprocess.py  validate.py
templates/: Formato_GIRS.docx  Informe desarrollo backend del SIRIGAM.docx
